--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -77,6 +77,34 @@ jobs:
             llvm_enable_projects: "clang;lld"
             llvm_targets_to_build: "WebAssembly"
             emsdk_ver: "3.1.73"
+          - name: ubu24-arm-clang-repl-21-emscripten
+            os: ubuntu-24.04-arm
+            clang-runtime: '21'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
+          - name: osx15-arm-clang-repl-21-emscripten
+            os: macos-15
+            clang-runtime: '21'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
+          - name: ubu24-x86-clang-repl-21-emscripten
+            os: ubuntu-24.04
+            clang-runtime: '21'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
+          - name: win2025-x86-clang-repl-21-emscripten
+            os: windows-2025
+            clang-runtime: '21'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
 
     steps:
     - uses: actions/checkout@v4
@@ -199,7 +227,7 @@ jobs:
         else
           # Apply patches
           llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
-          if [[ "${llvm_vers}" == "19" || "${llvm_vers}" == "20" ]]; then
+          if [[ "${llvm_vers}" == "19" || "${llvm_vers}" == "20" || "${llvm_vers}" == "21"  ]]; then
             git apply -v ../patches/llvm/emscripten-clang${{ matrix.clang-runtime }}-*.patch
             echo "Apply emscripten-clang${{ matrix.clang-runtime }}-*.patch patches:"
           fi
@@ -321,6 +349,11 @@ jobs:
             git apply -v emscripten-clang20-2-shift-temporary-files-to-tmp-dir.patch
             git apply -v emscripten-clang20-3-enable_exception_handling.patch
           }
+          elseif ( "${{ matrix.clang-runtime }}" -imatch "21" )
+          {
+            git apply -v Windows-emscripten-clang21-1-CrossCompile.patch
+            git apply -v emscripten-clang21-2-shift-temporary-files-to-tmp-dir.patch
+          }
           cd build
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           emcmake cmake -DCMAKE_BUILD_TYPE=Release `
@@ -428,6 +461,30 @@ jobs:
           - name: win2025-x86-clang-repl-20-emscripten
             os: windows-2025
             clang-runtime: '20'
+            cling: Off
+            micromamba_shell_init: powershell
+            emsdk_ver: "3.1.73"
+          - name: ubu24-x86-clang-repl-21-emscripten_wasm
+            os: ubuntu-24.04
+            clang-runtime: '21'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: osx15-arm-clang-repl-21-emscripten_wasm
+            os: macos-15
+            clang-runtime: '21'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: ubu24-arm-clang-repl-21-emscripten_wasm
+            os: ubuntu-24.04-arm
+            clang-runtime: '21'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: win2025-x86-clang-repl-21-emscripten
+            os: windows-2025
+            clang-runtime: '21'
             cling: Off
             micromamba_shell_init: powershell
             emsdk_ver: "3.1.73"
