--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -817,6 +817,23 @@ jobs:
                 ..\
         }
         emmake make -j ${{ env.ncpus }} check-cppinterop
+        cd .\unittests\CppInterOp\
+        Invoke-WebRequest -Uri "https://commondatastorage.googleapis.com/chromium-browser-snapshots/Win/1411573/chrome-win.zip" -OutFile "$PWD\chrome-win.zip" -Verbose
+        Expand-Archive -Path "$PWD\chrome-win.zip" -DestinationPath "$PWD" -Force -Verbose
+        Invoke-WebRequest -Uri "https://download.mozilla.org/?product=firefox-latest-ssl&os=win64&lang=en-US" -OutFile "firefox-setup.exe" -Verbose
+        & "C:\Program Files\7-Zip\7z.exe" x "firefox-setup.exe"
+        $env:PATH="$PWD\core;$PWD\chrome-win;$env:PATH"
+        echo "PATH=$env:PATH"
+        echo "PATH=$env:PATH" >> $env:GITHUB_ENV
+        echo "Running CppInterOpTests in Firefox"
+        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+        echo "Running DynamicLibraryManagerTests in Firefox"
+        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+        echo "Running CppInterOpTests in Chromium"
+        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+        echo "Running DynamicLibraryManagerTests in Chromium"
+        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+        cd ..\..
         emmake make -j ${{ env.ncpus }} install
 
     - name: Build and Test/Install CppInterOp on Windows systems (static library)
@@ -899,6 +916,15 @@ jobs:
                 ..\
         }
         emmake make -j ${{ env.ncpus }} check-cppinterop
+        cd .\unittests\CppInterOp\
+        echo "Running CppInterOpTests in Firefox"
+        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+        echo "Running DynamicLibraryManagerTests in Firefox"
+        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+        echo "Running CppInterOpTests in Chromium"
+        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+        echo "Running DynamicLibraryManagerTests in Chromium"
+        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
 
     - name: Build xeus-cpp
       if: ${{ runner.os != 'windows' }}
