--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -175,7 +175,7 @@ jobs:
                         -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling  \
                         -DCMAKE_BUILD_TYPE=Release \
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten \
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        \
+                        -DLLVM_ENABLE_ASSERTIONS=OFF                        \
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" \
                         -DLLVM_ENABLE_LIBEDIT=OFF \
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" \
@@ -194,8 +194,8 @@ jobs:
                         -DLLVM_ENABLE_LIBPFM=OFF                        \
                         -DCLANG_BUILD_TOOLS=OFF                         \
                         -DLLVM_NATIVE_TOOL_DIR=$NATIVE_DIR 		\
-                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0" \
-                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0" \
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
                         -DLLVM_ENABLE_LTO=Full \
                          ../llvm
           emmake ninja clang cling lld gtest_main
@@ -209,7 +209,7 @@ jobs:
           cd build
           emcmake cmake -DCMAKE_BUILD_TYPE=Release \
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten \
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        \
+                        -DLLVM_ENABLE_ASSERTIONS=OFF                        \
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" \
                         -DLLVM_ENABLE_LIBEDIT=OFF \
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" \
@@ -228,8 +228,8 @@ jobs:
                         -DCLANG_BUILD_TOOLS=OFF                         \
                         -G Ninja                                         \
                         -DLLVM_NATIVE_TOOL_DIR=$NATIVE_DIR 		\
-                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0" \
-                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0" \
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
                         -DLLVM_ENABLE_LTO=Full \
                         ../llvm
           emmake ninja libclang clangInterpreter clangStaticAnalyzerCore lldWasm
@@ -283,7 +283,7 @@ jobs:
                         -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling  `
                         -DCMAKE_BUILD_TYPE=Release `
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten `
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        `
+                        -DLLVM_ENABLE_ASSERTIONS=OFF                        `
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" `
                         -DLLVM_ENABLE_LIBEDIT=OFF `
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" `
@@ -301,8 +301,8 @@ jobs:
                         -DLLVM_BUILD_TOOLS=OFF                          `
                         -DLLVM_ENABLE_LIBPFM=OFF                        `
                         -DCLANG_BUILD_TOOLS=OFF                         `
-                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0" `
-                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0" `
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
                         -DLLVM_ENABLE_LTO=Full `
                 ..\llvm
           emmake make clang cling lld gtest_main
@@ -327,7 +327,7 @@ jobs:
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           emcmake cmake -DCMAKE_BUILD_TYPE=Release `
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten `
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        `
+                        -DLLVM_ENABLE_ASSERTIONS=OFF                        `
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" `
                         -DLLVM_ENABLE_LIBEDIT=OFF `
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" `
@@ -344,8 +344,8 @@ jobs:
                         -DLLVM_BUILD_TOOLS=OFF                          `
                         -DLLVM_ENABLE_LIBPFM=OFF                        `
                         -DCLANG_BUILD_TOOLS=OFF                         `
-                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0" `
-                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0" `
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
                         -DLLVM_ENABLE_LTO=Full `
                         -G Ninja `
                         ..\llvm
