--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -318,6 +318,7 @@ jobs:
           elseif ( "${{ matrix.clang-runtime }}" -imatch "20" )
           {
             git apply -v emscripten-clang20-2-shift-temporary-files-to-tmp-dir.patch
+            git apply -v emscripten-clang20-3-enable_exception_handling.patch
           }
           cd build
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
