--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -744,7 +744,6 @@ jobs:
       if: ${{ runner.os == 'windows' }}
       shell: powershell
       run: |
-        $ErrorActionPreference = "Stop"
         micromamba create -f environment-wasm.yml --platform=emscripten-wasm32
         .\emsdk\emsdk activate ${{matrix.emsdk_ver}}
         .\emsdk\emsdk_env.ps1
@@ -822,7 +821,19 @@ jobs:
                 -DSYSROOT_PATH="$env:SYSROOT_PATH"                     `
                 ..\
         }
-        emmake make -j ${{ env.ncpus }} check-cppinterop
+        function Error-OnFailure {
+          param (
+              [Parameter(Mandatory)]
+              [ScriptBlock]$Command
+          )
+
+         & $Command
+
+         if ($LASTEXITCODE -ne 0) {
+            exit $LASTEXITCODE
+         }
+        }
+        Error-OnFailure{ emmake make -j ${{ env.ncpus }} check-cppinterop }
         cd .\unittests\CppInterOp\
         Invoke-WebRequest -Uri "https://commondatastorage.googleapis.com/chromium-browser-snapshots/Win/1411573/chrome-win.zip" -OutFile "$PWD\chrome-win.zip" -Verbose
         Expand-Archive -Path "$PWD\chrome-win.zip" -DestinationPath "$PWD" -Force -Verbose
@@ -832,23 +843,34 @@ jobs:
         echo "PATH=$env:PATH"
         echo "PATH=$env:PATH" >> $env:GITHUB_ENV
         echo "Running CppInterOpTests in Firefox"
-        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+        Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html }
         echo "Running DynamicLibraryManagerTests in Firefox"
-        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+        Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html }
         echo "Running CppInterOpTests in Chromium"
-        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+        Error-OnFailure { emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html }
         echo "Running DynamicLibraryManagerTests in Chromium"
-        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+        Error-OnFailure { emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html }
         cd ..\..
-        emmake make -j ${{ env.ncpus }} install
+        Error-OnFailure { emmake make -j ${{ env.ncpus }} install }
 
     - name: Build and Test/Install CppInterOp on Windows systems (static library)
       if: ${{ runner.os == 'windows' }}
       shell: powershell
       run: |
-        $ErrorActionPreference = "Stop"
         .\emsdk\emsdk activate ${{matrix.emsdk_ver}}
         .\emsdk\emsdk_env.ps1
+        function Error-OnFailure {
+          param (
+              [Parameter(Mandatory)]
+              [ScriptBlock]$Command
+          )
+
+         & $Command
+
+         if ($LASTEXITCODE -ne 0) {
+            exit $LASTEXITCODE
+         }
+        }
         $env:PWD_DIR= $PWD.Path
         $env:SYSROOT_PATH="$env:EMSDK/upstream/emscripten/cache/sysroot"
         $env:PREFIX="%CONDA_PREFIX%/envs/CppInterOp-wasm"
@@ -921,16 +943,16 @@ jobs:
                 -DSYSROOT_PATH="$env:SYSROOT_PATH"                     `
                 ..\
         }
-        emmake make -j ${{ env.ncpus }} check-cppinterop
+        Error-OnFailure { emmake make -j ${{ env.ncpus }} check-cppinterop }
         cd .\unittests\CppInterOp\
         echo "Running CppInterOpTests in Firefox"
-        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+        Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html }
         echo "Running DynamicLibraryManagerTests in Firefox"
-        emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+        Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html }
         echo "Running CppInterOpTests in Chromium"
-        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+        Error-OnFailure { emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html }
         echo "Running DynamicLibraryManagerTests in Chromium"
-        emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+        Error-OnFailure{ emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html }
 
     - name: Build xeus-cpp
       if: ${{ runner.os != 'windows' }}
