Use relative path to browser_tests_safari rather than copying to test folder

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -575,10 +575,10 @@ jobs:
           python -m pip install selenium
           echo "Running CppInterOpTests in Safari"
           emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html &
-          python browser_tests_safari.py CppInterOpTests.html
+          python ../../../scripts/browser_tests_safari.py CppInterOpTests.html
           echo "Running DynamicLibraryManagerTests in Safari"          
           emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html &
-          python browser_tests_safari.py DynamicLibraryManagerTests.html
+          python ../../../scripts/browser_tests_safari.py DynamicLibraryManagerTests.html
         else
           export ARCHITECHURE=$(uname -m)
           if [[ "$ARCHITECHURE" != "aarch64" ]]; then
