--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -172,10 +172,10 @@ jobs:
         python -m pip install selenium
         echo "Running CppInterOpTests in Safari"
         emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html &
-        python browser_tests_safari.py CppInterOpTests.html
+        python ../../../scripts/browser_tests_safari.py CppInterOpTests.html
         echo "Running DynamicLibraryManagerTests in Safari"          
         emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html &
-        python browser_tests_safari.py DynamicLibraryManagerTests.html
+        python ../../../scripts/browser_tests_safari.py DynamicLibraryManagerTests.html
 
         cd ../../
         emmake make -j ${{ env.ncpus }} install
