--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -571,6 +571,14 @@ jobs:
           emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
           echo "Running DynamicLibraryManagerTests in Google Chrome"          
           emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+          sudo safaridriver --enable
+          python -m pip install selenium
+          echo "Running CppInterOpTests in Safari"
+          emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html &
+          python ../../../scripts/browser_tests_safari.py CppInterOpTests.html
+          echo "Running DynamicLibraryManagerTests in Safari"          
+          emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html &
+          python ../../../scripts/browser_tests_safari.py DynamicLibraryManagerTests.html
         else
           export ARCHITECHURE=$(uname -m)
           if [[ "$ARCHITECHURE" != "aarch64" ]]; then
@@ -706,6 +714,12 @@ jobs:
           emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
           echo "Running DynamicLibraryManagerTests in Google Chrome"          
           emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+          echo "Running CppInterOpTests in Safari"
+          emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html &
+          python ../../../scripts/browser_tests_safari.py CppInterOpTests.html
+          echo "Running DynamicLibraryManagerTests in Safari"          
+          emrun --no_browser --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html &
+          python ../../../scripts/browser_tests_safari.py DynamicLibraryManagerTests.html
         else
           export ARCHITECHURE=$(uname -m)
           if [[ "$ARCHITECHURE" != "aarch64" ]]; then
