--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -58,7 +58,7 @@ jobs:
         source ./emsdk/emsdk_env.sh
         mkdir native_build
         cd native_build
-        cmake -DLLVM_ENABLE_PROJECTS=clang -DLLVM_TARGETS_TO_BUILD=host -DCMAKE_BUILD_TYPE=Release ../llvm/
+        cmake -DLLVM_ENABLE_PROJECTS=clang -DLLVM_TARGETS_TO_BUILD=host -DCMAKE_BUILD_TYPE=Release -G Ninja ../llvm/
         cmake --build . --target llvm-tblgen clang-tblgen --parallel $(nproc --all)
         export NATIVE_DIR=$PWD/bin/
         cd ..
