--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -137,7 +137,7 @@ jobs:
         Error-On-Failure { node ./tools/clang/unittests/Interpreter/ExceptionTests/ClangReplInterpreterExceptionTests.js }
 
   build-PR:
-    name: ${{ matrix.os }}
+    name: ${{ matrix.os }}-PR-150977
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
