Reduce CppInterOp Emscripten shared library size (#655)

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -175,7 +175,6 @@ jobs:
                         -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling  \
                         -DCMAKE_BUILD_TYPE=Release \
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten \
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        \
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" \
                         -DLLVM_ENABLE_LIBEDIT=OFF \
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" \
@@ -194,6 +193,9 @@ jobs:
                         -DLLVM_ENABLE_LIBPFM=OFF                        \
                         -DCLANG_BUILD_TOOLS=OFF                         \
                         -DLLVM_NATIVE_TOOL_DIR=$NATIVE_DIR 		\
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DLLVM_ENABLE_LTO=Full \
                          ../llvm
           emmake ninja clang cling lld gtest_main
         else
@@ -206,7 +208,6 @@ jobs:
           cd build
           emcmake cmake -DCMAKE_BUILD_TYPE=Release \
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten \
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        \
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" \
                         -DLLVM_ENABLE_LIBEDIT=OFF \
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" \
@@ -225,6 +226,9 @@ jobs:
                         -DCLANG_BUILD_TOOLS=OFF                         \
                         -G Ninja                                         \
                         -DLLVM_NATIVE_TOOL_DIR=$NATIVE_DIR 		\
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" \
+                        -DLLVM_ENABLE_LTO=Full \
                         ../llvm
           emmake ninja libclang clangInterpreter clangStaticAnalyzerCore lldWasm
         fi
@@ -284,7 +288,6 @@ jobs:
                         -DLLVM_EXTERNAL_CLING_SOURCE_DIR=../../cling  `
                         -DCMAKE_BUILD_TYPE=Release `
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten `
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        `
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" `
                         -DLLVM_ENABLE_LIBEDIT=OFF `
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" `
@@ -302,6 +305,9 @@ jobs:
                         -DLLVM_BUILD_TOOLS=OFF                          `
                         -DLLVM_ENABLE_LIBPFM=OFF                        `
                         -DCLANG_BUILD_TOOLS=OFF                         `
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DLLVM_ENABLE_LTO=Full `
                         -DLLVM_NATIVE_TOOL_DIR="$env:NATIVE_DIR" 		    `
                 ..\llvm
           emmake make clang cling lld gtest_main
@@ -325,7 +331,6 @@ jobs:
           echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           emcmake cmake -DCMAKE_BUILD_TYPE=Release `
                         -DLLVM_HOST_TRIPLE=wasm32-unknown-emscripten `
-                        -DLLVM_ENABLE_ASSERTIONS=ON                        `
                         -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" `
                         -DLLVM_ENABLE_LIBEDIT=OFF `
                         -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects }}" `
@@ -342,6 +347,9 @@ jobs:
                         -DLLVM_BUILD_TOOLS=OFF                          `
                         -DLLVM_ENABLE_LIBPFM=OFF                        `
                         -DCLANG_BUILD_TOOLS=OFF                         `
+                        -DCMAKE_C_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DCMAKE_CXX_FLAGS_RELEASE="-Oz -g0 -DNDEBUG" `
+                        -DLLVM_ENABLE_LTO=Full `
                         -G Ninja `
                         -DLLVM_NATIVE_TOOL_DIR="$env:NATIVE_DIR" 		          `
                         ..\llvm
@@ -527,6 +535,15 @@ jobs:
         fi
 
         emmake make -j ${{ env.ncpus }} check-cppinterop
+        os="${{ matrix.os }}"
+        if [[ "${os}" != macos* ]] ; then
+          actual_size=$(stat -c%s "./lib/libclangCppInterOp.so")
+          max_size=$((40 * 1024 * 1024))
+          if [[ "$actual_size" -gt "$max_size" ]]; then
+            echo "Error: libclangCppInterOp.so is larger than 40 MB."
+            exit 1
+          fi
+        fi
         cd ./unittests/CppInterOp/
         # Fresh install browsers, and run Emscripten tests in them
         # This is to match the Emscripten build instructions, where
@@ -689,7 +706,12 @@ jobs:
                 -DSYSROOT_PATH=$SYSROOT_PATH                     \
                 ../
         fi
-        emmake make -j ${{ env.ncpus }} check-cppinterop
+        os="${{ matrix.os }}"
+        if [[ "${os}" != macos* ]] ; then
+          EMCC_CORES=1 emmake make -j 1 check-cppinterop
+        else
+          EMCC_CORES=2 emmake make -j 2 check-cppinterop
+        fi
         cd ./unittests/CppInterOp/
         # Explaination of options for emrun
         # --browser (name of browser on path)
