--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -1064,10 +1064,25 @@ jobs:
       if: ${{ runner.os == 'windows' }}
       shell: powershell
       run: |
-        $ErrorActionPreference = "Stop"
+        function Error-OnFailure {
+          param (
+              [Parameter(Mandatory)]
+              [ScriptBlock]$Command
+          )
+
+         & $Command
+
+         if ($LASTEXITCODE -ne 0) {
+            exit $LASTEXITCODE
+         }
+        }
         micromamba activate CppInterOp-wasm
         cd .\xeus-cpp\build\test
         node test_xeus_cpp.js
+        echo "Running test_xeus_cpp in Firefox"
+        Error-OnFailure { emrun.bat --browser="firefox.exe" --kill_exit --timeout 60 --browser-args="--headless"  test_xeus_cpp.html }
+        echo "Running test_xeus_cpp in Chromium"
+        Error-OnFailure { emrun.bat --browser="chrome.exe" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  test_xeus_cpp.html }
 
     - name: Jupyter Lite integration
       if: ${{ runner.os != 'windows' }}
