--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -69,6 +69,9 @@ endif()
             continue()
           endif()
           foreach(transitive_lib ${transitive_libs})
+            if(NOT TARGET ${transitive_lib})
+              continue()
+            endif()
             get_target_property(lib_type ${transitive_lib} TYPE)
             if("${lib_type}" STREQUAL "STATIC_LIBRARY")
               list(APPEND static_transitive_libs ${transitive_lib})
