--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -131,6 +131,7 @@ jobs:
           brew unlink "$pkg"
           brew link --overwrite "$pkg"
         done
+        brew remove kotlin
         brew upgrade openssl >/dev/null 2>&1
         brew install ninja
         brew upgrade
