--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -706,7 +706,7 @@ jobs:
         fi
         os="${{ matrix.os }}"
         if [[ "${os}" != macos* ]] ; then
-          EMCC_CORES=1 emmake make -j 1 check-cppinterop
+          emmake make -j ${{ env.ncpus }} check-cppinterop
         else
           EMCC_CORES=2 emmake make -j 2 check-cppinterop
         fi
