--- a/.github/actions/Build_and_Test_cppyy/action.yml
+++ b/.github/actions/Build_and_Test_cppyy/action.yml
@@ -78,7 +78,7 @@ runs:
         python -m pip install --upgrade pip
         python -m pip install pytest
         python -m pip install pytest-xdist
-        python -m pip install numba
+        python -m pip install numba==0.61.2
         echo ::endgroup::
         echo ::group::Run complete test suite
         set -o pipefail
