--- a/environment-wasm.yml
+++ b/environment-wasm.yml
@@ -4,6 +4,7 @@ channels:
 dependencies:
   - emscripten-abi==3.1.73
   - nlohmann_json
+  - nlohmann_json-abi
   - xeus-lite
   - xeus
   - cpp-argparse
