Disable DynamicLibTests for OOP

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -87,7 +87,7 @@ export_executable_symbols(CppInterOpTests)
 unset(LLVM_LINK_COMPONENTS)
 
 if (NOT EMSCRIPTEN)
-  set(EXTRA_TEST_SOURCE_FILES Utils.cpp main.cpp)
+  set(EXTRA_TEST_SOURCE_FILES Utils.cpp)
   set(EXTRA_PATH_TEST_BINARIES /TestSharedLib/unittests/bin/$<CONFIG>/)
 endif()
 
