[DO NOT MERGE] supp file only for clang20

--- a/.github/actions/Build_and_Test_CppInterOp/action.yml
+++ b/.github/actions/Build_and_Test_CppInterOp/action.yml
@@ -72,7 +72,7 @@ runs:
                 --suppressions="${SUPPRESSION_FILE}" \
                 unittests/CppInterOp/CppInterOpTests/unittests/bin/${{ env.BUILD_TYPE }}/CppInterOpTests
             else
-              valgrind --leak-check=full --track-origins=yes --error-exitcode=1 \
+              valgrind --show-error-list=yes --track-origins=yes --error-exitcode=1 \
                 --show-leak-kinds=definite,possible \
                 unittests/CppInterOp/CppInterOpTests/unittests/bin/${{ env.BUILD_TYPE }}/CppInterOpTests
             fi
