Search for lld for Emscripten builds that use cling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,9 @@ include(GNUInstallDirs)
   if (CPPINTEROP_USE_CLING)
     message(STATUS "Mode CPPINTEROP_USE_CLING = ON")
     find_package(LLVM REQUIRED CONFIG ${llvm_search_hints} NO_DEFAULT_PATH)
+    if(EMSCRIPTEN)
+      find_package(LLD REQUIRED CONFIG ${lld_search_hints} NO_DEFAULT_PATH)
+    endif()
     find_package(Clang REQUIRED CONFIG ${clang_search_hints} NO_DEFAULT_PATH)
     find_package(Cling REQUIRED CONFIG ${cling_search_hints} NO_DEFAULT_PATH)
   endif(CPPINTEROP_USE_CLING)
