--- a/.github/actions/Build_and_Test_CppInterOp/action.yml
+++ b/.github/actions/Build_and_Test_CppInterOp/action.yml
@@ -60,13 +60,8 @@ runs:
           os="${{ matrix.os }}"
           if [[ "${os}" != "macos"* ]]; then
             CLANG_VERSION="${{ matrix.clang-runtime }}"
-            if [[ "${{ matrix.cling }}" == "On" ]]; then
-              CLANG_INTERPRETER="cling"
-            else
-              CLANG_INTERPRETER="clang"
-            fi
-            SUPPRESSION_FILE="../etc/${CLANG_INTERPRETER}${CLANG_VERSION}-valgrind.supp"
-            if [[ "$CLANG_VERSION" == "20" ]]; then
+            if [[ "$CLANG_VERSION" == "20" && "${{ matrix.cling }}" == "Off" ]]; then
+              SUPPRESSION_FILE="../etc/clang${CLANG_VERSION}-valgrind.supp"
               valgrind --show-error-list=yes --track-origins=yes --error-exitcode=1 \
                 --show-leak-kinds=definite,possible \
                 --suppressions="${SUPPRESSION_FILE}" \
