Support Out-Of-Process JIT (#717)
* Implement Out-Of-Process JIT for CppInterOp

* Backport LLVM clang-repl's out-of-process JIT patches for clang 20

* Update `StreamCaptureInfo` to work with out-of-process JIT
    In out-of-process JIT, stream capture does not work out of the box.
    Therefore, at the time of creation of the JIT process, we customise it to redirect `stdout` and `stderr` to specific temporary files.
    The parent process creates these files and has a reference to them.
    The parent process can now dynamically read the contents of these temporary files, replicating the stream redirection.
    Note that `stdin` needs special care and does not work as expected right now.
    Ideally, the child process should just redirect to the parent process's streams, but this could not be implemented.

* Update Documentation
    Add build instructions for out-of-process JIT.

* Update tests to use Parameterised Test fixtures
    This enables reusing the existing tests without duplication for in-process and out-of-process JIT.
    Introduces multiple test configurations (InProcess & OutOfProcess right now), that can be used to customise the creation of the interpreter in the test suite.

* Add valgrind suppression file for out-of-process JIT
    These suppressions are from LLVM. Needs to be fixed upstream.

---------

Co-authored-by: kr-2003 <kumar.kr.abhinav@gmail.com>
Co-authored-by: Vipul Cariappa <vipulcariappa@gmail.com>

--- a/.github/actions/Build_LLVM/action.yml
+++ b/.github/actions/Build_LLVM/action.yml
@@ -43,6 +43,10 @@ runs:
           ninja LLVMOrcDebugging -j ${{ env.ncpus }}
           ninja clingInterpreter -j ${{ env.ncpus }}
         else
+          if [[ "${{ matrix.oop-jit }}" == "On" ]]; then
+            git apply -v ../patches/llvm/clang20-1-out-of-process.patch
+            echo "Apply clang20-1-out-of-process.patch:"
+          fi
           cd build
           cmake -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects}}" \
                 -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}"  \
@@ -57,7 +61,15 @@ runs:
                 -DLLVM_INCLUDE_EXAMPLES=OFF                     \
                 -DLLVM_INCLUDE_TESTS=OFF                        \
                 ../llvm
-          ninja clang clangInterpreter clangStaticAnalyzerCore -j ${{ env.ncpus }}
+          ninja clang clangInterpreter clangStaticAnalyzerCore
+          if [[ "${{ matrix.oop-jit }}" == "On" ]]; then
+            if [[ "${{ matrix.os }}" == macos* ]]; then
+              SUFFIX="_osx"
+            elif [[ "${{ matrix.os }}" == ubuntu* ]]; then
+              SUFFIX="-x86_64"
+            fi
+            ninja llvm-jitlink-executor orc_rt${SUFFIX} -j ${{ env.ncpus }}       
+          fi
           cd ./tools/
           rm -rf $(find . -maxdepth 1 ! -name "clang" ! -name ".")
           cd ..
