--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,16 +65,14 @@ jobs:
             llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
           # Ubuntu X86 Jobs
-          - name: ubu24-x86-gcc12-clang-repl-21-coverage
+          - name: ubu24-x86-gcc12-clang-repl-21
             os: ubuntu-24.04
             compiler: gcc-12
             clang-runtime: '21'
             cling: Off
             cppyy: Off
-            llvm_enable_projects: "clang;compiler-rt"
+            llvm_enable_projects: "clang"
             llvm_targets_to_build: "host;NVPTX"
-            coverage: true
-            oop-jit: On
           - name: ubu24-x86-gcc12-clang-repl-20
             os: ubuntu-24.04
             compiler: gcc-12
@@ -92,6 +90,16 @@ jobs:
             llvm_enable_projects: "clang;compiler-rt"
             llvm_targets_to_build: "host;NVPTX"
             oop-jit: On
+          - name: ubu24-x86-gcc12-clang-repl-20-out-of-process-coverage
+            os: ubuntu-24.04
+            compiler: gcc-12
+            clang-runtime: '20'
+            cling: Off
+            cppyy: Off
+            llvm_enable_projects: "clang;compiler-rt"
+            llvm_targets_to_build: "host;NVPTX"
+            oop-jit: On
+            coverage: true
           - name: ubu24-x86-gcc12-clang-repl-19-cppyy
             os: ubuntu-24.04
             compiler: gcc-12
@@ -349,3 +357,4 @@ jobs:
       uses: mxschmitt/action-tmate@v3
       # When debugging increase to a suitable value!
       timeout-minutes: 30
+
